==> sensorplatforms/open-sensor-platform/embedded/common/modules/bus-drivers/stm32l1-cm3/i2c_driver.c <==
#include "common.h"
#include "i2c_driver.h"
#define I2C_TXRX_STATUS_ACTIVE                0
#define I2C_TXRX_STATUS_PASSED                1
#define I2C_TXRX_STATUS_FAILED                2
#define CR1_START_Set                         ((uint16_t)0x0100)
#define CR1_START_Reset                       ((uint16_t)0xFEFF)
#define CR1_STOP_Set                          ((uint16_t)0x0200)
#define CR1_STOP_Reset                        ((uint16_t)0xFDFF)
#define CR1_ACK_Set                           ((uint16_t)0x0400)
#define CR1_ACK_Reset                         ((uint16_t)0xFBFF)
#define I2C_STATUS_BIT_DUALF                  (0x0080)
#define I2C_STATUS_BIT_SMBHOST                (0x0040)
#define I2C_STATUS_BIT_SMBDEFAULT             (0x0020)
#define I2C_STATUS_BIT_GENCALL                (0x0010)
#define I2C_STATUS_BIT_TRA                    (0x0004)
#define I2C_STATUS_BIT_BUSY                   (0x0002)
#define I2C_STATUS_BIT_MASTER                 (0x0001)
#define I2C_STATUS_BIT_SMBALERT               (0x8000)
#define I2C_STATUS_BIT_TIMEOUT                (0x4000)
#define I2C_STATUS_BIT_PECERR                 (0x1000)
#define I2C_STATUS_BIT_OVR                    (0x0800)
#define I2C_STATUS_BIT_AF                     (0x0400)
#define I2C_STATUS_BIT_ARLO                   (0x0200)
#define I2C_STATUS_BIT_BERR                   (0x0100)
#define I2C_STATUS_BIT_TXE                    (0x0080)
#define I2C_STATUS_BIT_RXNE                   (0x0040)

osp_bool_t I2C_HardwareSetup( I2C_TypeDef *busId )
{
    GPIO_InitTypeDef  GPIO_InitStructure;
    NVIC_InitTypeDef  NVIC_InitStructure;

    if (busId == I2C_SENSOR_BUS)
    {
        if (sI2C_Bus1Initialized)
        {
            return true;
        }

        /* Reset the peripheral (this allows soft restarts to recover the bus in case of hangups) */
        I2C_DeInit(busId);

        /* Enable Clocks to the peripheral and GPIOs used */
        RCC_APB1PeriphClockCmd(RCC_Periph_I2C_SENSOR_BUS, ENABLE);
        RCC_AHBPeriphClockCmd(RCC_Periph_I2C_SENSOR_BUS_GPIO, ENABLE);

        /* NVIC/Interrupt config */
        /* Configure and enable I2C event interrupt -------------------------------*/
        NVIC_InitStructure.NVIC_IRQChannel = I2C_SENSOR_BUS_EVENT_IRQ_CH;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = I2C_SENSOR_BUS_INT_PREEMPT_PRIORITY;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = I2C_SENSOR_BUS_EVENT_INT_SUB_PRIORITY;
        NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
        NVIC_Init(&NVIC_InitStructure);

        /* Configure and enable I2C error interrupt -------------------------------*/  
        NVIC_InitStructure.NVIC_IRQChannel = I2C_SENSOR_BUS_ERROR_IRQ_CH;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = I2C_SENSOR_BUS_ERROR_INT_SUB_PRIORITY;
        NVIC_Init(&NVIC_InitStructure);

        /* Connect PXx to I2C_SCL */
        GPIO_PinAFConfig(I2C_SENSOR_BUS_GPIO_GRP, I2C_SENSOR_BUS_SCL_PIN_SRC, I2C_SENSOR_BUF_AF);

        /* Connect PXx to I2C_SDA */
        GPIO_PinAFConfig(I2C_SENSOR_BUS_GPIO_GRP, I2C_SENSOR_BUS_SDA_PIN_SRC, I2C_SENSOR_BUF_AF);

        /* GPIO Configuration for CLK and SDA signals */
        GPIO_InitStructure.GPIO_Pin = I2C_SENSOR_BUS_SCL_PIN  | I2C_SENSOR_BUS_SDA_PIN;
        GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
        GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
        GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
        GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
        GPIO_Init( I2C_SENSOR_BUS_GPIO_GRP, &GPIO_InitStructure );

        //Init the I2C driver interface
        I2C_Master_Initialise();

        /* Do a software reset after enabling master I2C clock - this takes care of BUSY condition */
        I2C_SoftwareResetCmd( I2C_SENSOR_BUS, ENABLE );
        I2C_SoftwareResetCmd( I2C_SENSOR_BUS, DISABLE );

        /* Now we need to do Master init again */
        I2C_Master_Initialise();

        sI2C_Bus1Initialized = true;
        return true;
    }
    return false;
}

uint8_t I2C_Start_Transfer( uint8_t slaveAddr, uint16_t regAddr, uint8_t *pData, uint8_t dataSize, I2C_SendMode_t sendMode )
{
    /* Check that no transfer is already pending*/
    if (asyncXfer.i2c_txrx_status == I2C_TXRX_STATUS_ACTIVE)
    {

        D0_printf("I2C_Start_Transfer: A transfer is already pending\n\r");
        return I2C_ERR_BUSY;
    }

    if ((sendMode == I2C_MASTER_READ) || (sendMode == I2C_MASTER_WRITE))
    {
        /* Update the transfer descriptor */
        asyncXfer.i2c_slave_addr  = slaveAddr;
        asyncXfer.i2c_slave_reg   = regAddr;
        asyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_ACTIVE;
        asyncXfer.pData           = pData;
        asyncXfer.num             = dataSize;
        asyncXfer.byte_index      = 0;
        asyncXfer.i2c_txrx_phase  = 0;
        gSendMode = sendMode;
        /* Enable interrupts and clear flags */
        I2C_ITConfig( I2C_SENSOR_BUS, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, ENABLE );
        I2C_ClearITPendingBit( I2C_SENSOR_BUS, I2C_IT_SMBALERT | I2C_IT_TIMEOUT | I2C_IT_PECERR | I2C_IT_OVR
            | I2C_IT_AF | I2C_IT_ARLO | I2C_IT_BERR );

        /* Enable ACK as it is disabled in interrupt handler after each transaction */
        I2C_SENSOR_BUS->CR1 |= CR1_ACK_Set;

        /* Initiate start */
        I2C_GenerateSTART( I2C_SENSOR_BUS, ENABLE );
    }
    else
    {
        return I2C_ERR_REQ;
    }
    return I2C_ERR_OK;
}
